correct layout issues in views pages

--- a/public/styles.css
+++ b/public/styles.css
@@ -6,21 +6,34 @@
   font-family: "Work Sans", sans-serif;
 }
 
+.column1 {
+  margin-left: 70px;
+  padding-top: 5px;
 
-
-
-
+}
 h1 {
   margin-top: -20px;
   font-family: "Montserrat", sans-serif;
   letter-spacing: .18em;
- font-size: 80px;
- text-align: center;
- font-weight: 700;
- text-transform: uppercase;
+  font-size: 80px;
+   text-align: center;
+   font-weight: 700;
+   text-transform: uppercase;
+   color: black;
 }
 
+h3 {
 
+  padding-bottom: 20px;
+
+}
+h4 {
+  font-family: 'Work Sans';
+  text-align: center;
+  /*font-style: italic;*/
+  padding-bottom: 5px;
+  font-weight: 300;
+}
 
 .linkbar {
   margin-top: -10px;
@@ -47,14 +60,4 @@ font-size: 25px;
 color: black;
 text-decoration: none;
 
-}
-
-
-
-h4 {
-  font-family: 'Work Sans';
-  text-align: center;
-  /*font-style: italic;*/
-  padding-bottom: 5px;
-  font-weight: 300;
 }
